FIX table2csv.js
table could not be exported if not visible.

--- a/codev.css
+++ b/codev.css
@@ -94,6 +94,9 @@ table.gray tbody {
    background-color: transparent;
 }
 
+.pointer {
+   cursor: pointer;
+}
 
 .hover {
    cursor: pointer;
